images unstretched; almost bug-free

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,6 +69,7 @@
   width: 150px;
   height: 150px;
   border-radius: 15px;
+  object-fit: contain;
 }
 
 .side2 {
@@ -116,6 +117,7 @@
   border-radius: 15px;
   padding: 12.5px;
   height: 175px;
+  background: radial-gradient(lightgray, ghostwhite);
 }
 
 .grammar-board {
@@ -130,6 +132,11 @@
 
 .verb {
   background-color: tomato;
+}
+
+.s {
+  background-color: tomato;
+  width: 12px;
 }
 
 .noun {
